--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             </div>
         </div>
         <section class="container-fluid">
-            <iframe width="650" height="400" src="https://www.youtube.com/embed/E3m9wJD_dgQ?si=NW0nOsl2IMAQ0uws"
+            <iframe width="650" height="400" src="https://youtu.be/E3m9wJD_dgQ"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 allowfullscreen></iframe>
