--- a/pages/patrocinadores.html
+++ b/pages/patrocinadores.html
@@ -5,22 +5,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilos.css">
     <title>CARRERAS DE TRAIL</title>
-<meta name="description"
-    content="pagina diseña para poder hacer publicidad de carreras de trail, como asi tambien fomentar turismo en la provincia">
-<meta name="keywords"
-    content="publicidad, carreras, trail, turismo, eventos, paisajes, aventura, montaña, running, trekking">
-<title>Carreras de Trail</title>
-<link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
-<meta property="og:type" content="publicidad">
-<meta property="og:title" content="Carreras de Trail">
-<meta property="og:url" content="https://carrerasdetrail.netlify.app/">
-<meta property="og:image" content="https.......">
-<meta property="og:description"
-    content="pagina diseña para poder hacer publicidad de carreras de trail, como asi tambien fomentar turismo en la provincia">
+    <meta name="description"
+        content="pagina diseña para poder hacer publicidad de carreras de trail, como asi tambien fomentar turismo en la provincia">
+    <meta name="keywords"
+        content="publicidad, carreras, trail, turismo, eventos, paisajes, aventura, montaña, running, trekking">
+    <title>Carreras de Trail</title>
+    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
+    <meta property="og:type" content="publicidad">
+    <meta property="og:title" content="Carreras de Trail">
+    <meta property="og:url" content="https://carrerasdetrail.netlify.app/">
+    <meta property="og:image" content="https.......">
+    <meta property="og:description"
+        content="pagina diseña para poder hacer publicidad de carreras de trail, como asi tambien fomentar turismo en la provincia">
 </head>
 
 <body>
@@ -95,25 +95,29 @@
             <div class="img-fluid animated-image">
                 <img src="../img/sponsor/achikan.png" alt="A´Chikán">
                 <a href="https://www.instagram.com/achikan_calidadensabor/?hl=ess" target="_blank">INFO</a>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis magnam reiciendis obcaecati. Ad, sapiente
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis magnam reiciendis obcaecati. Ad,
+                    sapiente
                     necessitatibus.</p>
             </div>
             <div class="img-fluid animated-image">
                 <img src="../img/sponsor/casaruggieri.png" alt="casaruggieri">
                 <a href="https://instagram.com/casaruggieriok?igshid=YmMyMTA2M2Y=" target="_blank">INFO</a>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis magnam reiciendis obcaecati. Ad, sapiente
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis magnam reiciendis obcaecati. Ad,
+                    sapiente
                     necessitatibus.</p>
             </div>
             <div class="img-fluid animated-image">
                 <img src="../img/sponsor/agroandina.png" alt="agroandina">
                 <a href="https://agroandina.com.ar/" target="_blank">INFO</a>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis magnam reiciendis obcaecati. Ad, sapiente
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis magnam reiciendis obcaecati. Ad,
+                    sapiente
                     necessitatibus.</p>
             </div>
             <div class="img-fluid animated-image">
                 <img src="../img/sponsor/elfondogym.png" alt="elfondogym">
                 <a href="https://www.instagram.com/elfondogym8/" target="_blank">INFO</a>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis magnam reiciendis obcaecati. Ad, sapiente
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis magnam reiciendis obcaecati. Ad,
+                    sapiente
                     necessitatibus.</p>
             </div>
         </section>
@@ -133,9 +137,8 @@
                     alt="foto red telegram"></a>
         </div>
     </footer>
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
         crossorigin="anonymous"></script>
 </body>
 
