--- a/pages/datos-larioja.html
+++ b/pages/datos-larioja.html
@@ -2,26 +2,26 @@
 <html lang="es">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/estilos.css">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <link rel="stylesheet" href="../css/estilos.css" />
     <title>CARRERAS DE TRAIL</title>
 
     <meta name="description"
-        content="pagina diseña para poder hacer publicidad de carreras de trail, como asi tambien fomentar turismo en la provincia">
+        content="pagina diseña para poder hacer publicidad de carreras de trail, como asi tambien fomentar turismo en la provincia" />
     <meta name="keywords"
-        content="publicidad, carreras, trail, turismo, eventos, paisajes, aventura, montaña, running, trekking">
+        content="publicidad, carreras, trail, turismo, eventos, paisajes, aventura, montaña, running, trekking" />
     <title>Carreras de Trail</title>
-    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
-    <meta property="og:type" content="publicidad">
-    <meta property="og:title" content="Carreras de Trail">
-    <meta property="og:url" content="https://carrerasdetrail.netlify.app/">
-    <meta property="og:image" content="https.......">
+    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon" />
+    <meta property="og:type" content="publicidad" />
+    <meta property="og:title" content="Carreras de Trail" />
+    <meta property="og:url" content="https://carrerasdetrail.netlify.app/" />
+    <meta property="og:image" content="https......." />
     <meta property="og:description"
-        content="pagina diseña para poder hacer publicidad de carreras de trail, como asi tambien fomentar turismo en la provincia">
+        content="pagina diseña para poder hacer publicidad de carreras de trail, como asi tambien fomentar turismo en la provincia" />
 </head>
 
 <body>
@@ -30,7 +30,8 @@
             <nav class="navbar navbar-expand-lg">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="../index.html"><img src="../img/carreras.png"
-                            alt="foto de inicio">CARRERAS DE TRAIL</a>
+                            alt="foto de inicio" />CARRERAS DE
+                        TRAIL</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -53,16 +54,20 @@
                                     Carreras
                                 </a>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="./datos-larioja.html">La Rioja</a>
-                                    </li>
-                                    <li><a class="dropdown-item" href="./datos-catamarca.html">Catamarca</a>
-                                    </li>
-                                    <li><a class="dropdown-item" href="./datos-cordoba.html">Cordoba</a>
-                                    </li>
-                                    <li><a class="dropdown-item" href="./datos-sanjuan.html">San Juan</a>
+                                    <li>
+                                        <a class="dropdown-item" href="./datos-larioja.html">La Rioja</a>
                                     </li>
                                     <li>
-                                        <hr class="dropdown-divider">
+                                        <a class="dropdown-item" href="./datos-catamarca.html">Catamarca</a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item" href="./datos-cordoba.html">Cordoba</a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item" href="./datos-sanjuan.html">San Juan</a>
+                                    </li>
+                                    <li>
+                                        <hr class="dropdown-divider" />
                                     </li>
                                 </ul>
                             </li>
@@ -97,24 +102,24 @@
         </div>
         <section class="grid-galeria">
             <div class="grid-items img-1">
-                <img src="../img/larioja/lamexicana.jpg" alt="foto fomentadora del paisaje en provincia">
+                <img src="../img/larioja/lamexicana.jpg" alt="foto fomentadora del paisaje en provincia" />
                 <p>Av. La Mexicana</p>
             </div>
 
             <div class="grid-items img-2">
-                <img src="../img/larioja/parque.jpg" alt="foto fomentadora del paisaje en provincia">
+                <img src="../img/larioja/parque.jpg" alt="foto fomentadora del paisaje en provincia" />
                 <p>Parque de los Dinosaurios</p>
             </div>
             <div class="grid-items">
-                <img src="../img/larioja/estrella.jpg" alt="foto fomentadora del paisaje en provincia">
+                <img src="../img/larioja/estrella.jpg" alt="foto fomentadora del paisaje en provincia" />
                 <p>Estrella Diaguita</p>
             </div>
             <div class="grid-items">
-                <img src="../img/larioja/monumento.jpg" alt="foto fomentadora del paisaje en provincia">
+                <img src="../img/larioja/monumento.jpg" alt="foto fomentadora del paisaje en provincia" />
                 <p>Monumento Facundo Quiroga</p>
             </div>
             <div class="grid-items img-3">
-                <img src="../img/larioja/dique.jpg" alt="foto fomentadora del paisaje en provincia">
+                <img src="../img/larioja/dique.jpg" alt="foto fomentadora del paisaje en provincia" />
                 <p>Dique los Sauce</p>
             </div>
         </section>
@@ -122,21 +127,20 @@
     <footer>
         <div>
             <a href="./patrocinadores.html"><img class="img-fluid animated-image" src="../img/patrocinios.png"
-                    alt=""></a>
+                    alt="" /></a>
         </div>
         <div>
             <h1>CARRERAS DE TRAIL</h1>
             <a href="https://wa.me/qr/62K43ZTL633AG1" target="_blank"><img src="../img/whatsapp.png"
-                    alt="foto red whatsapp"></a>
+                    alt="foto red whatsapp" /></a>
             <a href="https://instagram.com/carrerasdetrail?utm_source=qr&igshid=ZDc4ODBmNjlmNQ%3D%3D"
-                target="_blank"><img src="../img/instagram.png" alt="foto red instagram"></a>
+                target="_blank"><img src="../img/instagram.png" alt="foto red instagram" /></a>
             <a href="https://t.me/carrerasdetrai" target="_blank"><img src="../img/telegram.png"
-                    alt="foto red telegram"></a>
+                    alt="foto red telegram" /></a>
         </div>
     </footer>
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
         crossorigin="anonymous"></script>
 </body>
 
