--- a/pages/eventos.html
+++ b/pages/eventos.html
@@ -95,54 +95,54 @@
         <section>
             <div class="img-fluid animated-image">
                 <img src="../img/eventos/brutalrace.png" alt="brutalrace">
-                <a href="httpwww.brutalrace.com.ar" target="_blank">INFO</a>
+                <a href="http://brutalrace.com.ar/brutal.htm" target="_blank">INFO</a>
                 <p>BRUTAL RACE - CORDOBA</p>
             </div>
             <div class="img-fluid animated-image">
                 <img src="../img/eventos/desafiopuntanegra.png" alt="desafiopuntanegra">
-                <a href="httpswww.desafiopuntanegra.com.ar" target="_blank">INFO</a>
+                <a href="https://desafiopuntanegra.com/web/" target="_blank">INFO</a>
                 <p>DESAFIO PUNTA NEGRA - SAN JUAN</p>
             </div>
             <div class="img-fluid animated-image">
                 <img src="../img/eventos/valholl.utmb.png" alt="valhollutmb">
-                <a href="httpsvalholl.utmb.worldes" target="_blank">INFO</a>
+                <a href="https://valholl.utmb.world/es" target="_blank">INFO</a>
                 <p>VALHOLL UTMB - CORDOBA</p>
             </div>
             <div class="img-fluid animated-image">
                 <img src="../img/eventos/fiambaladeserttrail.png" alt="fiambaladeserttrail">
-                <a href="httpssalvaje.com.areventofiambala-desert-trail-viii" target="_blank">INFO</a>
+                <a href="https://salvaje.com.ar/evento/fiambala-desert-trail-viii/" target="_blank">INFO</a>
                 <p>FIAMBALA DESERT TRAIL - CATAMARCA</p>
             </div>
             <div class="img-fluid animated-image">
                 <img src="../img/eventos/champaultratrail.png" alt="champaultratrail">
-                <a href="httpschampaultratrail.com.ar" target="_blank">INFO</a>
+                <a href="https://champaultrarace.com.ar/" target="_blank">INFO</a>
                 <p>CHAMPA ULTRA TRAIL - CORDOBA</p>
             </div>
-            <div class="img-fluid animated-image">
+            <!-- <div class="img-fluid animated-image">
                 <img src="../img/eventos/pucaraultratrail.png" alt="pucaraultratrail">
                 <a href="httpswww.pucararun.com" target="_blank">INFO</a>
                 <p>PUCARA ULTRA TRAIL - LA RIOJA</p>
-            </div>
+            </div> -->
             <div class="img-fluid animated-image">
                 <img src="../img/eventos/nonoultratrail.png" alt="nonoultratrail">
-                <a href="httpsnonoultratrail.com.ar" target="_blank">INFO</a>
+                <a href="https://nonotrailrun.com.ar/" target="_blank">INFO</a>
                 <p>NONO ULTRA TRAIL - CORDOBA</p>
             </div>
-            <div class="img-fluid animated-image">
+            <!-- <div class="img-fluid animated-image">
                 <img src="../img/eventos/desafioichura.png" alt="desafioichura">
-                <a href="httpsdesafioichura.com.ar" target="_blank">INFO</a>
+                <a href="" target="_blank">INFO</a>
                 <p>DESAFIO ICHURA - LA RIOJA</p>
-            </div>
+            </div> -->
             <div class="img-fluid animated-image">
                 <img src="../img/eventos/utacch.png" alt="utacchultratrail">
-                <a href="httpswww.utacchultratrail.com" target="_blank">INFO</a>
+                <a href="https://www.utacchultratrail.com/" target="_blank">INFO</a>
                 <p>UTACCH ULTRA TRAIL - CORDOBA</p>
             </div>
-            <div class="img-fluid animated-image">
+            <!-- <div class="img-fluid animated-image">
                 <img src="../img/eventos/gorilarace.png" alt="gorilarace">
-                <a href="https://gorilarace.com.ar/" target="_blank">INFO</a>
+                <a href="" target="_blank">INFO</a>
                 <p>GORILA RACE - CORDOBA</p>
-            </div>
+            </div> -->
         </section>
     </main>
     <footer>
