--- a/index.html
+++ b/index.html
@@ -2,34 +2,36 @@
 <html lang="es">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/estilos.css">
+        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous" />
+    <link rel="stylesheet" href="./css/estilos.css" />
 
     <meta name="description"
-        content="pagina diseña para poder hacer publicidad de carreras de trail, como asi tambien fomentar turismo en la provincia">
+        content="pagina diseña para poder hacer publicidad de carreras de trail, como asi tambien fomentar turismo en la provincia" />
     <meta name="keywords"
-        content="publicidad, carreras, trail, turismo, eventos, paisajes, aventura, montaña, running, trekking">
+        content="publicidad, carreras, trail, turismo, eventos, paisajes, aventura, montaña, running, trekking" />
     <title>Carreras de Trail</title>
-    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
-    <meta property="og:type" content="publicidad">
-    <meta property="og:title" content="Carreras de Trail">
-    <meta property="og:url" content="https://carrerasdetrail.netlify.app/">
-    <meta property="og:image" content="https.......">
+    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon" />
+    <meta property="og:type" content="publicidad" />
+    <meta property="og:title" content="Carreras de Trail" />
+    <meta property="og:url" content="https://carrerasdetrail.netlify.app/" />
+    <meta property="og:image" content="https......." />
     <meta property="og:description"
-        content="pagina diseña para poder hacer publicidad de carreras de trail, como asi tambien fomentar turismo en la provincia">
+        content="pagina diseña para poder hacer publicidad de carreras de trail, como asi tambien fomentar turismo en la provincia" />
 </head>
 
 <body>
-    <header> <!--NAVEGADOR IMPLEMENTADO DE BOOTSTRAP-->
+    <header>
+        <!--NAVEGADOR IMPLEMENTADO DE BOOTSTRAP-->
         <div class="grid-contenedor">
             <nav class="navbar navbar-expand-lg">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="./index.html"><img src="./img/carreras.png"
-                            alt="foto de inicio">CARRERAS DE TRAIL</a>
+                            alt="foto de inicio" />CARRERAS DE
+                        TRAIL</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -52,16 +54,20 @@
                                     Turismo
                                 </a>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="./pages/datos-larioja.html">La Rioja</a>
-                                    </li>
-                                    <li><a class="dropdown-item" href="./pages/datos-catamarca.html">Catamarca</a>
-                                    </li>
-                                    <li><a class="dropdown-item" href="./pages/datos-cordoba.html">Cordoba</a>
-                                    </li>
-                                    <li><a class="dropdown-item" href="./pages/datos-sanjuan.html">San Juan</a>
+                                    <li>
+                                        <a class="dropdown-item" href="./pages/datos-larioja.html">La Rioja</a>
                                     </li>
                                     <li>
-                                        <hr class="dropdown-divider">
+                                        <a class="dropdown-item" href="./pages/datos-catamarca.html">Catamarca</a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item" href="./pages/datos-cordoba.html">Cordoba</a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item" href="./pages/datos-sanjuan.html">San Juan</a>
+                                    </li>
+                                    <li>
+                                        <hr class="dropdown-divider" />
                                     </li>
                                 </ul>
                             </li>
@@ -87,23 +93,24 @@
             </nav>
         </div>
     </header>
-    <main class="principal"> <!--CARRUSEL IMPLEMENTADO DE BOOTSTRAP-->
+    <main class="principal">
+        <!--CARRUSEL IMPLEMENTADO DE BOOTSTRAP-->
         <div id="carouselExampleRide" class="carousel slide" data-bs-ride="true">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="./img/carrusel1.jpg" class="d-block w-100" alt="foto motivadora">
+                    <img src="./img/carrusel1.jpg" class="d-block w-100" alt="foto motivadora" />
                 </div>
                 <div class="carousel-item">
-                    <img src="./img/carrusel2.jpg" class="d-block w-100" alt="foto motivadora">
+                    <img src="./img/carrusel2.jpg" class="d-block w-100" alt="foto motivadora" />
                 </div>
                 <div class="carousel-item">
-                    <img src="./img/carrusel3.jpg" class="d-block w-100" alt="foto motivadora">
+                    <img src="./img/carrusel3.jpg" class="d-block w-100" alt="foto motivadora" />
                 </div>
                 <div class="carousel-item">
-                    <img src="./img/carrusel4.jpg" class="d-block w-100" alt="foto motivadora">
+                    <img src="./img/carrusel4.jpg" class="d-block w-100" alt="foto motivadora" />
                 </div>
                 <div class="carousel-item">
-                    <img src="./img/carrusel5.jpg" class="d-block w-100" alt="foto motivadora">
+                    <img src="./img/carrusel5.jpg" class="d-block w-100" alt="foto motivadora" />
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleRide"
                     data-bs-slide="prev">
@@ -118,48 +125,55 @@
             </div>
         </div>
         <section class="container-fluid">
-            <iframe width="650" height="400" src="https://youtu.be/E3m9wJD_dgQ" title="YouTube video player"
-                frameborder="0"
+            <iframe width="560" height="315"
+                src="https://www.youtube.com/embed/E3m9wJD_dgQ?si=zqrH3ojf-d7vBEn4&amp;start=6"
+                title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen></iframe>
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </section>
         <section class="info">
             <div>
-                <img class="img-fluid animated-image" src="./img/aptitudes.jpg" alt="foto demostrativa">
+                <img class="img-fluid animated-image" src="./img/aptitudes.jpg" alt="foto demostrativa" />
                 <h2>APTITUDES</h2>
-                <p>Todos tenemos nuestros puntos fuertes, por eso es importante perfeccionarse cada dia
-                    demostrando asi nuestras capacidades como atletas.</p>
+                <p>
+                    Todos tenemos nuestros puntos fuertes, por eso es importante
+                    perfeccionarse cada dia demostrando asi nuestras capacidades como
+                    atletas.
+                </p>
             </div>
             <div>
-                <img class="img-fluid animated-image" src="./img/motivacion.jpg" alt="foto demostrativa">
+                <img class="img-fluid animated-image" src="./img/motivacion.jpg" alt="foto demostrativa" />
                 <h2>MOTIVACION</h2>
-                <p>Sal a correr y disfrutar de cada kilometro, da igual el tiempo que le dediques, lo
-                    importante es terminar la carrera y demostrar que se puede, porque lo vivido no te lo
-                    quitara nadie.</p>
+                <p>
+                    Sal a correr y disfrutar de cada kilometro, da igual el tiempo que
+                    le dediques, lo importante es terminar la carrera y demostrar que se
+                    puede, porque lo vivido no te lo quitara nadie.
+                </p>
             </div>
             <div>
-                <img class="img-fluid animated-image" src="./img/valores.jpg" alt="foto demostrativa">
+                <img class="img-fluid animated-image" src="./img/valores.jpg" alt="foto demostrativa" />
                 <h2>VALORES</h2>
-                <p>No compitas con nadie, solo supera tus propios limites y recuerda siempre que se
-                    puede
-                    hacer un
-                    kilometro mas, gasta tu vida en lo que te hace bien.</p>
+                <p>
+                    No compitas con nadie, solo supera tus propios limites y recuerda
+                    siempre que se puede hacer un kilometro mas, gasta tu vida en lo que
+                    te hace bien.
+                </p>
             </div>
         </section>
     </main>
     <footer>
         <div>
             <a href="./pages/patrocinadores.html"><img class="img-fluid animated-image" src="./img/patrocinios.png"
-                    alt=""></a>
+                    alt="" /></a>
         </div>
         <div>
             <h1>CARRERAS DE TRAIL</h1>
             <a href="https://wa.me/qr/62K43ZTL633AG1" target="_blank"><img src="./img/whatsapp.png"
-                    alt="foto red whatsapp"></a>
+                    alt="foto red whatsapp" /></a>
             <a href="https://instagram.com/carrerasdetrail?utm_source=qr&igshid=ZDc4ODBmNjlmNQ%3D%3D"
-                target="_blank"><img src="./img/instagram.png" alt="foto red instagram"></a>
+                target="_blank"><img src="./img/instagram.png" alt="foto red instagram" /></a>
             <a href="https://t.me/carrerasdetrai" target="_blank"><img src="./img/telegram.png"
-                    alt="foto red telegram"></a>
+                    alt="foto red telegram" /></a>
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
