--- a/pages/datos-catamarca.html
+++ b/pages/datos-catamarca.html
@@ -55,7 +55,7 @@
                                 <ul class="dropdown-menu">
                                     <li><a class="dropdown-item" href="./datos-larioja.html">La Rioja</a>
                                     </li>
-                                    <li><a class="dropdown-item" href="./datos-catamarca.html">Catamarca</a>
+                                    <li><a class="dropdown-item" href="#">Catamarca</a>
                                     </li>
                                     <li><a class="dropdown-item" href="./datos-cordoba.html">Cordoba</a>
                                     </li>
