--- a/pages/datos-cordoba.html
+++ b/pages/datos-cordoba.html
@@ -57,7 +57,7 @@
                                     </li>
                                     <li><a class="dropdown-item" href="./datos-catamarca.html">Catamarca</a>
                                     </li>
-                                    <li><a class="dropdown-item" href="./datos-cordoba.html">Cordoba</a>
+                                    <li><a class="dropdown-item" href="#">Cordoba</a>
                                     </li>
                                     <li><a class="dropdown-item" href="./datos-sanjuan.html">San Juan</a>
                                     </li>
