--- a/pages/datos-sanjuan.html
+++ b/pages/datos-sanjuan.html
@@ -60,7 +60,7 @@
                                     </li>
                                     <li><a class="dropdown-item" href="./datos-cordoba.html">Cordoba</a>
                                     </li>
-                                    <li><a class="dropdown-item" href="./datos-sanjuan.html">San Juan</a>
+                                    <li><a class="dropdown-item" href="#">San Juan</a>
                                     </li>
                                     <li>
                                         <hr class="dropdown-divider">
