--- a/pages/fotografos.html
+++ b/pages/fotografos.html
@@ -67,7 +67,7 @@
                                 </ul>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./fotografos.html">Fotografos</a>
+                                <a class="nav-link" href="#">Fotografos</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="./locutores.html">Locutores</a>
