--- a/pages/patrocinadores.html
+++ b/pages/patrocinadores.html
@@ -124,7 +124,7 @@
     </main>
     <footer>
         <div>
-            <a href="./patrocinadores.html"><img class="img-fluid animated-image" src="../img/patrocinios.png"
+            <a href="#"><img class="img-fluid animated-image" src="../img/patrocinios.png"
                     alt=""></a>
         </div>
         <div>
