--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -75,7 +75,7 @@
                                 <a class="nav-link" href="./nosotros.html">Nosotros</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./contacto.html">Contacto</a>
+                                <a class="nav-link" href="#">Contacto</a>
                             </li>
                         </ul>
                         <!-- <form class="d-flex" role="search">
