--- a/pages/datos-larioja.html
+++ b/pages/datos-larioja.html
@@ -55,7 +55,7 @@
                                 </a>
                                 <ul class="dropdown-menu">
                                     <li>
-                                        <a class="dropdown-item" href="./datos-larioja.html">La Rioja</a>
+                                        <a class="dropdown-item" href="#">La Rioja</a>
                                     </li>
                                     <li>
                                         <a class="dropdown-item" href="./datos-catamarca.html">Catamarca</a>
