--- a/pages/eventos.html
+++ b/pages/eventos.html
@@ -42,7 +42,7 @@
                                 <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
                             </li> -->
                             <li class="nav-item">
-                                <a class="nav-link" href="./eventos.html">Eventos</a>
+                                <a class="nav-link" href="#">Eventos</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="./galeria.html">Galeria</a>
