--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -45,7 +45,7 @@
                                 <a class="nav-link" href="./eventos.html">Eventos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./galeria.html">Galeria</a>
+                                <a class="nav-link" href="#">Galeria</a>
                             </li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="./carreras.html" role="button"
