--- a/pages/locutores.html
+++ b/pages/locutores.html
@@ -70,7 +70,7 @@
                                 <a class="nav-link" href="./fotografos.html">Fotografos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./locutores.html">Locutores</a>
+                                <a class="nav-link" href="#">Locutores</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="./nosotros.html">Nosotros</a>
