--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -73,7 +73,7 @@
                                 <a class="nav-link" href="./locutores.html">Locutores</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./nosotros.html">Nosotros</a>
+                                <a class="nav-link" href="#">Nosotros</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="./contacto.html">Contacto</a>
