--- a/pages/turismo.html
+++ b/pages/turismo.html
@@ -48,7 +48,7 @@
                                 <a class="nav-link" href="./galeria.html">Galeria</a>
                             </li>
                             <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="./turismo.html" role="button"
+                                <a class="nav-link dropdown-toggle" href="#" role="button"
                                     data-bs-toggle="dropdown" aria-expanded="false">
                                     Turismo
                                 </a>
